--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <!-- <a class="navbar-brand" href="#page-top">top of page</a> -->
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -35,21 +35,23 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead text-white text-center custom-header">
+        <header class="masthead text-white custom-header">
+            <div class="d-flex justify-content-between custom-title">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">hi i'm emily.</h1>
                 <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
+
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0">Student - Full Stack Software Developer</p>
+           
             </div>
+            <div class="container d-flex align-items-center flex-column">
+             <!-- Masthead Avatar Image-->
+              <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
+           
+            </div>
+            </div>"
         </header>
         <!-- Portfolio Section-->
         <section class="page-section portfolio" id="portfolio">
