fixed colors, rearranged about me and portfolio, added gradient to nav bar

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </div>
         </header>
                 <!-- About Section-->
-                <section class="page-section text-white mb-0" id="about">
+                <section class="page-section mb-0" id="about">
                     <div class="container">
                         <!-- About Section Heading-->
-                        <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                        <h2 class="page-section-heading text-center text-uppercase">About</h2>
                         <br><br>
                         <!-- About Section Content-->
                         <div class="row">
@@ -71,7 +71,7 @@
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+                <h2 class="page-section-heading text-white text-center text-uppercase text-secondary mb-0">Portfolio</h2>
 
                     <br><br>
            
@@ -138,7 +138,7 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <h2 class="page-section-heading text-center text-uppercase mb-0">Contact Me</h2>
                 <!-- Icon Divider-->
 <br><br>
                 <!-- Contact Section Form-->
