--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                 <!-- Icon Divider-->
 <br><br>           <div class="row d-flex justify-content-center">      
                  <div class="col-lg-4 mb-5 mb-lg-0 d-flex justify-content-center">
-                        <a class="btn btn-outline-dark btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-dark btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-dark btn-social mx-1" href="#!"><i class="fas fa-fw fa-envelope"></i></a>
                         <a class="btn btn-outline-dark btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-dark btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <a class="btn btn-outline-dark btn-social mx-1" href="#!"><i class="fab fa-fw fa-github"></i></a>
                     </div>    
+
                 </div>       
                   
                 </div>
